<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <!--<com.devyk.aveditor.widget.AVPlayView-->
            <!--android:id="@+id/player_view"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent" tools:layout_editor_absoluteY="37dp"-->
            <!--tools:layout_editor_absoluteX="0dp"/>   -->


    <com.devyk.aveditor.widget.AVEditorView
            android:id="@+id/editor_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="37dp"
            tools:layout_editor_absoluteX="0dp"/>


    <com.devyk.ikavedit.widget.AnimTextView
            android:id="@+id/camera_filter"
            android:layout_marginTop="@dimen/dimen_30dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_filter"
            android:textSize="@dimen/dimen_10sp"
            android:textColor="@color/button_bg_select"
            android:drawablePadding="@dimen/dimen_3dp"
            app:layout_constraintRight_toRightOf="parent"
            android:drawableTop="@mipmap/ic_filter"
            android:gravity="center"
            tools:ignore="MissingConstraints"/>

    <com.devyk.ikavedit.widget.AnimTextView
            android:id="@+id/back"
            android:layout_marginTop="@dimen/dimen_30dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_10sp"
            android:textColor="@color/button_bg_select"
            android:drawablePadding="@dimen/dimen_3dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:drawableTop="@mipmap/back"
            android:gravity="center"
            tools:ignore="MissingConstraints"/>


    <com.devyk.ikavedit.widget.AnimTextView
            android:id="@+id/clip"
            app:layout_constraintTop_toBottomOf="@id/camera_filter"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_height="wrap_content"
            android:text="@string/clip"
            android:textSize="@dimen/dimen_10sp"
            android:textColor="@color/button_bg_select"
            android:drawablePadding="@dimen/dimen_3dp"
            app:layout_constraintRight_toRightOf="parent"
            android:drawableTop="@mipmap/clip"
            android:gravity="center"
            tools:ignore="MissingConstraints"/>


    <com.devyk.ikavedit.widget.AnimTextView
            android:id="@+id/change_sound"
            app:layout_constraintTop_toBottomOf="@id/clip"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_height="wrap_content"
            android:text="@string/change_sound"
            android:textSize="@dimen/dimen_10sp"
            android:textColor="@color/button_bg_select"
            android:drawablePadding="@dimen/dimen_3dp"
            app:layout_constraintRight_toRightOf="parent"
            android:drawableTop="@mipmap/speak"
            android:gravity="center"
            tools:ignore="MissingConstraints"/>

    <com.devyk.ikavedit.widget.AnimTextView
            android:gravity="center"
            android:id="@+id/select_bg_music"
            android:drawableTop="@mipmap/music_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_bg_music"
            android:textSize="@dimen/dimen_10sp"
            android:textColor="@color/button_bg_select"
            android:drawablePadding="@dimen/dimen_6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:focusable="true"
            android:singleLine="true"
    />

    <com.devyk.ikavedit.widget.AnimTextView
            android:id="@+id/effect"
            android:gravity="center"
            android:drawableTop="@mipmap/effects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/effect"
            android:textSize="@dimen/dimen_10sp"
            android:textColor="@color/button_bg_select"
            android:drawablePadding="@dimen/dimen_6dp"
            app:layout_constraintTop_toTopOf="@id/select_bg_music"
            app:layout_constraintBottom_toBottomOf="@id/select_bg_music"
            app:layout_constraintStart_toEndOf="@+id/select_bg_music"
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:focusable="true"
            android:singleLine="true"
    />

    <com.devyk.ikavedit.widget.AnimTextView
            android:id="@+id/txt"
            android:gravity="center"
            android:drawableTop="@mipmap/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt"
            android:textSize="@dimen/dimen_10sp"
            android:textColor="@color/button_bg_select"
            android:drawablePadding="@dimen/dimen_6dp"
            app:layout_constraintTop_toTopOf="@id/effect"
            app:layout_constraintBottom_toBottomOf="@id/effect"
            app:layout_constraintStart_toEndOf="@+id/effect"
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:focusable="true"
            android:singleLine="true"
    />

    <com.devyk.ikavedit.widget.AnimTextView
            android:id="@+id/sticker"
            android:gravity="center"
            android:drawableTop="@mipmap/sticker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sticker"
            android:textSize="@dimen/dimen_10sp"
            android:textColor="@color/button_bg_select"
            android:drawablePadding="@dimen/dimen_6dp"
            app:layout_constraintTop_toTopOf="@id/txt"
            app:layout_constraintBottom_toBottomOf="@id/txt"
            app:layout_constraintStart_toEndOf="@+id/txt"
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:focusable="true"
            android:singleLine="true"
    />

    <com.devyk.ikavedit.widget.AnimTextView
            android:id="@+id/next"
            android:text="@string/next"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_10sp"
            android:background="@color/recordbutton_down_color"
            android:layout_width="@dimen/dimen_74dp"
            android:layout_height="@dimen/dimen_35dp"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            tools:ignore="MissingConstraints"/>






    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/fl_edit"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="@dimen/dimen_50dp"
            android:layout_marginRight="@dimen/dimen_50dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_30dp"
            tools:ignore="MissingConstraints">




        <TextView
                android:id="@+id/tv_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:text="00:00"
                android:layout_marginTop="20dp"/>

        <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:text="00:00"/>

        <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/tv_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:text="00:00"/>

        <FrameLayout
                android:layout_marginTop="@dimen/dp_10"
                app:layout_constraintTop_toBottomOf="@+id/tv_duration"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60dp"
                tools:ignore="MissingConstraints">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/video_thumbnails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
            />

            <com.devyk.ikavedit.widget.RangeSlider
                    android:id="@+id/range_seek_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:leftThumbDrawable="@drawable/handle_left_right"
                    app:leftThumbIndex="0"
                    app:rightThumbDrawable="@drawable/handle_left_right"
                    app:lineColor="@android:color/white"
                    app:lineHeight="@dimen/dimen_2dp"
                    app:thumbWidth="@dimen/dimen_10dp"
                    app:tickCount="100"
                    app:maskColor="#A0000000"
            />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>